tests/negative/typecheck/dyn-type.orng
fn main() -> Int {
    let x: &dyn Int = 4
    5
}